--- a/src/groups/groups-manager.html
+++ b/src/groups/groups-manager.html
@@ -17,7 +17,13 @@
                             class="form-control" />
                     </div>
                     <div class="form-group">
-                        <letter topic="invitation-to-contribute" mail_body.bind="params.mail_body" button_text.bind="button_text" params.bind="mail_params"></letter>
+                        <letter topic="invitation-to-contribute" 
+                            mail_body.bind="params.mail_body"
+                            editing_template.bind="editing_template" 
+                            button_text.bind="button_text"
+                            send.delegate="send_the_letter()" 
+                            params.bind="mail_params">
+                        </letter>
                     </div>
                 </div>
                 <table class="table table-striped"
@@ -102,11 +108,11 @@
                     </div>
                 </div>
             </div>
-            <div style="width:300px;height:80vh;margin-left:12px;background-color:lightblue;margin-top:8px;"
+            <div style="width:300px;height:80vh;margin-left:12px;background-color:lightblue;"
                 if.bind="curr_group_id">
-                <button type="button" class="btn btn-${mail_sent ? 'success' : 'primary'} ${params.mail_body && ! mail_sent ? '' : 'disabled'}" click.delegate="mail_contacts()"
+                <!-- <button type="button" class="btn btn-${mail_sent ? 'success' : 'primary'} ${params.mail_body && ! mail_sent ? '' : 'disabled'}" click.delegate="mail_contacts()"
                     aubs-tooltip="text.bind:need_to_show;position:top;disabled.bind:params.mail_body;"
-                    style="width:100%;">${mail_contacts_caption}</button>
+                    style="width:100%;">${mail_contacts_caption}</button> -->
                 <div class="form-inline" style="display:flex;justify-content:space-between;padding: 8px;">
                     <div class="form-group">
                         <a href class="btn btn-success" click.delegate="add_or_update_contact(null)"
