contact list. more. wip.

--- a/src/groups/contact-edit.html
+++ b/src/groups/contact-edit.html
@@ -14,7 +14,7 @@
                         value.bind="curr_contact.first_name">
                 </div>
                 <div class="form-group">
-                        <input type="text" class="form-control" placeholder="${'admin.first-name' & t}"
+                        <input type="text" class="form-control" placeholder="${'admin.last-name' & t}"
                             value.bind="curr_contact.last_name">
                     </div>
                     <div class="form-group">
