--- a/src/groups/groups-manager.html
+++ b/src/groups/groups-manager.html
@@ -17,12 +17,9 @@
                             class="form-control" />
                     </div>
                     <div class="form-group">
-                        <letter topic="invitation-to-contribute" 
-                            mail_body.bind="params.mail_body"
-                            editing_template.bind="editing_template" 
-                            button_text.bind="button_text"
-                            send.delegate="send_the_letter()" 
-                            params.bind="mail_params">
+                        <letter topic="invitation-to-contribute" mail_body.bind="params.mail_body"
+                            editing_template.bind="editing_template" button_text.bind="button_text"
+                            send.delegate="send_the_letter()" params.bind="mail_params">
                         </letter>
                     </div>
                 </div>
@@ -108,17 +105,28 @@
                     </div>
                 </div>
             </div>
-            <div style="width:300px;height:80vh;margin-left:12px;background-color:lightblue;"
-                if.bind="curr_group_id">
+            <div style="width:300px;height:80vh;margin-left:12px;background-color:lightblue;" if.bind="curr_group_id">
                 <!-- <button type="button" class="btn btn-${mail_sent ? 'success' : 'primary'} ${params.mail_body && ! mail_sent ? '' : 'disabled'}" click.delegate="mail_contacts()"
                     aubs-tooltip="text.bind:need_to_show;position:top;disabled.bind:params.mail_body;"
                     style="width:100%;">${mail_contacts_caption}</button> -->
                 <div class="form-inline" style="display:flex;justify-content:space-between;padding: 8px;">
                     <div class="form-group">
-                        <a href class="btn btn-success" click.delegate="add_or_update_contact(null)"
-                            style="margin-bottom:1em;">
+                        <button class="btn btn-success" click.delegate="add_or_update_contact(null)"
+                            style="margin-bottom:1em;margin-left:4px;margin-right:4px;">
                             ${'groups.add-contact' & t}
-                        </a>
+                        </button>
+                        <button if.bind="csv_list.length>0" class="btn btn-primary" click.delegate="upload_contacts(null)"
+                            style="margin-bottom:1em;">
+                            ${'groups.upload-now' & t}
+                        </button>
+                        <button class="btn btn-success" if.bind="csv_list.length==0" style="height:32px;margin-top:-15px;" >
+                            <label for="upload-contacts">
+                                ${'groups.upload-contacts' & t}
+                            </label>
+                            <input id="upload-contacts" type="file"
+                                accept=".csv, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet, application/vnd.ms-excel"
+                                files.bind="csv_list" style="display:none;" />
+                        </button>
                     </div>
                     <div class="form-group">
                         <span style="font-size:150%;">${'groups.contacts' & t}</span>
@@ -134,8 +142,7 @@
                             ${contact.first_name} ${contact.last_name}
                             <i class="fa fa-pencil" style="cursor:pointer;"
                                 click.delegate="add_or_update_contact(contact)"></i>
-                            <i class="fa fa-trash" style="cursor:pointer;"
-                                click.delegate="remove_contact(contact)"></i>
+                            <i class="fa fa-trash" style="cursor:pointer;" click.delegate="remove_contact(contact)"></i>
                         </span>
                     </li>
 
