--- a/src/photos/photo-detail.html
+++ b/src/photos/photo-detail.html
@@ -3,7 +3,7 @@
     <div class="content-area photo-detail unselectable">
         <div class="detail-header">
             <h3 style="float:left;cursor:pointer;padding:0;margin:0;" if.bind="theme.is_desktop">
-                <chat-button chatroom_id.two-way="chatroom_id" new-chatroom.delegate="create_chatroom()" style="font-size:large;"></chat-button>
+                <chat-button chatroom_id.two-way="chatroom_id" new-chatroom.delegate="create_chatroom()" style="font-size:medium;"></chat-button>
                 <i class="far fa-arrow-up fa-rotate-90 ${next_class}" t="[title]photos.next-slide"
                     click.trigger="go_next($event)" if.bind="photo_ids.length > 1"></i>
                 <i class="far fa-arrow-up" t="[title]go-back" click.trigger="go_back()" if.bind="theme.is_desktop"></i>
