--- a/src/resources/elements/chats/chatroom.html
+++ b/src/resources/elements/chats/chatroom.html
@@ -1,9 +1,9 @@
 <template>
     <div css="background-color: lightgray;height:${theme.height-129}px" class="chatroom ${theme.rtltr}">
-        <div style="padding:16px;">
+        <div style="padding:16px 5px 0px 5px;">
             <div style="display:flex;justify-content:space-between;align-items:flex-start;">
                 <div css="float:${theme.same_dir};direction:${theme.rtltr};" if.bind="!editing">
-                    <h4 style="width:100%;margin:0;">${chatroom_name}</h4>
+                    <h4 style="width:100%;margin:0;padding:0 5px 0 5px;">${chatroom_name}</h4>
                 </div>
                 <div if.bind="editing">
                     <input style="font-size: 95%;margin-bottom:3px;float: left;width: 200px;height:28px;" dir="rtl"
