--- a/src/user/user-mode.html
+++ b/src/user/user-mode.html
@@ -122,7 +122,7 @@
                 </a>
             </li>
             <li>
-                <a class="resp-sharing-button__link" href="#" click.delegate="notify_link_copied()" >
+                <a class="resp-sharing-button__link" href="#" click.delegate="notify_link_copied()">
                     <i class="far fa-link"></i>&nbsp;&nbsp;Copy link
                 </a>
             </li>
@@ -154,6 +154,8 @@
                     click.trigger="load_help_messages()">Load help messages</a></li>
             <li if.bind="user.privileges.HELP_AUTHOR"><a class="dropdown-item" href="#"
                     click.trigger="print_help_messages()">Print help messages</a></li>
+            <li if.bind="user.privileges.HELP_AUTHOR"><a class="dropdown-item" href="#"
+                    click.trigger="save_letter_templates()">Save letter templates</a></li>
             <li if.bind="user.privileges.HELP_AUTHOR" class="divider"></li>
             <li if.bind="user.privileges.DEVELOPER"><a class="dropdown-item" href="#"
                     click.trigger="reindex_words()">Reindex Words</a></li>
