--- a/src/members/member-edit.html
+++ b/src/members/member-edit.html
@@ -9,7 +9,7 @@
             <span style="font-size:22px;">${'members.editing-member' & t}</span>
         </div>
     </div>
-    <div class="row">
+    <div class="row unselectable">
         <div class="col-md-6 family-chains">
             <div class="row">
                 <div class="col-md-6">
@@ -52,7 +52,7 @@
             </div>
         </div>
     </div>
-    <div class="row" style="margin-bottom:70px;">
+    <div class="row unselectable" style="margin-bottom:70px;">
         <form class="form-horizontal member-info" role="form">
             <!--The left wing of the form-->
             <div class="col-md-6 member-info-left">
