--- a/src/resources/elements/quick-login.html
+++ b/src/resources/elements/quick-login.html
@@ -1,5 +1,5 @@
 <template>
-    <div class="centered-form" dir="${theme.rtltr}" style="background-color:lightgray;padding-top:0px;">
+    <div id="quick-login" class="centered-form" dir="${theme.rtltr}">
         <div class="panel panel-default" if.bind="! user.isLoggedIn">
             <button if.bind="login_phase=='init'" class="btn btn-primary btn-block" click.delegate="open_dialog()">
                 ${explanation & t}
@@ -23,12 +23,14 @@
                             ${explain_registration & t}
                         </p>
                         <div class="form-group">
-                            <input type="password" name="password" id="password" class="form-control input-sm"
-                                value.bind="loginData.password" t="[placeholder]user.password">
+                            <input type="password" name="password" id="password" autocomplete="a_password"
+                                class="form-control input-sm" value.bind="loginData.password"
+                                t="[placeholder]user.password">
                         </div>
                         <div class="form-group ${loginData.password != loginData.confirm_password ? 'warning' : ''}">
                             <input type="password" name="confirm_password" id="password2" class="form-control input-sm"
-                                value.bind="loginData.confirm_password" t="[placeholder]user.confirm-password">
+                                autocomplete="a_password" value.bind="loginData.confirm_password"
+                                t="[placeholder]user.confirm-password">
                         </div>
                         <div class="form-group">
                             <input type="text" name="first_name" id="first_name" class="form-control input-sm"
@@ -50,20 +52,5 @@
             ${is_logged_in}
         </div>
     </div>
-
-    <style>
-        .warning {
-            border: solid 1px #aa00;
-        }
-        div.options, div.search-filter {
-            width: 100%;
-        }
-        div.warning {
-            width: 100%;
-            height: 32px;
-            padding: 4px 6px;
-            margin-bottom: 12px;
-        }
-    </style>
 
 </template>
