highlight unselectors if no results

--- a/src/audios/audios.html
+++ b/src/audios/audios.html
@@ -63,6 +63,7 @@
                         <multi-select options.bind="topic_list" place_holder_text="photos.click-topic" category="topic"
                             selected_options.bind="params.selected_topics" height.bind="220"
                             settings.bind="options_settings" has_groups.bind="has_grouped_topics"
+                            highlight_unselectors.bind="highlight_unselectors"
                             option_groups.bind="topic_groups" ms-change.delegate="handle_topic_change($event)"
                             new-name.delegate="add_topic($event)" name-changed.delegate="topic_name_changed($event)"
                             remove-option.delegate="remove_topic($event)"
