--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -159,6 +159,7 @@
                             new-name.delegate="add_topic($event)"
                             remove-option.delegate="remove_topic($event)"
                             name-changed.delegate="topic_name_changed($event)"
+                            highlight_unselectors.bind="highlight_unselectors"
                             name="topics"
                             place_holder_text="photos.click-topic"
                             clear_selections_now.bind="clear_selected_topics_now"
