--- a/src/stories/stories.html
+++ b/src/stories/stories.html
@@ -129,6 +129,7 @@
                             selected_options.bind="params.selected_topics" height.bind="220"
                             first_time.bind="no_topics_yet"
                             settings.bind="options_settings" has_groups.bind="has_grouped_topics"
+                            highlight_unselectors.bind="highlight_unselectors"
                             option_groups.bind="topic_groups" ms-change.delegate="handle_topic_change($event)"
                             new-name.delegate="add_topic($event)" name-changed.delegate="topic_name_changed($event)"
                             remove-option.delegate="remove_topic($event)"
@@ -149,6 +150,7 @@
                             params.bind="help_data"></help>
                         <multi-select options.bind="stories_index" selected_options.bind="params.selected_words"
                             keywords.two-way="keywords" place_holder_text="stories.word-index" height="201"
+                            highlight_unselectors.bind="highlight_unselectors"
                             ms-change.trigger="handle_words_change($event)" settings.bind="words_settings">
                         </multi-select>
                     </div>
