--- a/src/videos/videos.html
+++ b/src/videos/videos.html
@@ -101,6 +101,7 @@
                             has_groups.bind="has_grouped_topics"
                             option_groups.bind="topic_groups"
                             name="topics"
+                            highlight_unselectors.bind="highlight_unselectors"
                             new-name.delegate="add_topic($event)"
                             remove-option.delegate="remove_topic($event)"
                             name-changed.delegate="topic_name_changed($event)"
