--- a/src/resources/elements/quick-login.html
+++ b/src/resources/elements/quick-login.html
@@ -23,13 +23,13 @@
                             ${explain_registration & t}
                         </p>
                         <div class="form-group">
-                            <input type="password" name="password" id="password" autocomplete="a_password"
+                            <input type="password" name="password" id="password" autocomplete="off"
                                 class="form-control input-sm" value.bind="loginData.password"
                                 t="[placeholder]user.password">
                         </div>
                         <div class="form-group ${loginData.password != loginData.confirm_password ? 'warning' : ''}">
                             <input type="password" name="confirm_password" id="password2" class="form-control input-sm"
-                                autocomplete="a_password" value.bind="loginData.confirm_password"
+                                autocomplete="off" value.bind="loginData.confirm_password"
                                 t="[placeholder]user.confirm-password">
                         </div>
                         <div class="form-group">
