face moving/resizing fixed.

--- a/src/photos/full-size-photo.html
+++ b/src/photos/full-size-photo.html
@@ -40,7 +40,7 @@
                     </span>
                 </button>
             </div>
-            <div style="display:flex;flex-direction:column;width:32px;position:absolutexxx;top:0;left:-32px;">
+            <div style="display:flex;flex-direction:column;width:32px;">
                 <div show.bind="cropping"
                     css="height:${crop_height}px;width:${crop_width}px;position:absolute;top:${crop_top}px;left:${crop_left}px;margin-left:32px;opacity:0.5;background-color:grey;border-width:3px;border-style:dotted;border-color: yellow;"
                     interact-draggable.bind="theme.interact_setting" interact-dragmove.delegate="do_crop($event)"
