--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -1,6 +1,6 @@
 <template>
     <section class="container content-area photos" css="css_height()">
-        <div class="row content-area" id="photos-area" dir="${theme.rtltr}">
+        <div class="row content-area unselectable" id="photos-area" dir="${theme.rtltr}">
             <div class="row" style="margin-right:0;margin-left:0;">
                 <div class="col-md-1 hide-if-small" css="padding-top: 40px;position:relative">
                     <span style="position:absolute">${'photos.more-smaller' & t}<help topic="photos.slider" position="right"></help></span>
