--- a/src/resources/elements/edit-side-by-side.html
+++ b/src/resources/elements/edit-side-by-side.html
@@ -1,14 +1,11 @@
 <template>
-    <div class="row">
-        Header
-    </div>
-    <div class="row">
-        <div class="col-md-6" innerhtml.bind="fixed_str">
+    <div class="row" css="height:${height}px;margin-left:30px;margin-right:30px;"> 
+        <div class="col-md-6" innerhtml.bind="fixed_str" style="height:100%;width:45%;overflow:auto;background-color:beige;border:4px solid lightgray;">
 
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6" style="display:flex;flex-direction:column;">
             <div class="big-story-panel fr-view">
-                <froala-editor value.two-way="story_text" config.bind="{
+                <froala-editor value.two-way="edited_str" config.bind="{
                                 iconsTemplate: 'font_awesome_5',
                                 toolbarButtons: ['undo', 'redo', '|', 'bold', 'italic', 'underline', '|', 'insertLink', 'insertImage', 'insertVideo', '|',
                                         'color', 'fontSize', 'align', 'html'],
@@ -21,17 +18,21 @@
                                 VideoDefaultWidth: 160,
                                 charCounterCount: false,
                                 linkAlwaysBlank: true,
-                                language: 'he', heightMin: 400, heightMax: 400,
+                                language: 'he', heightMin: height-42, heightMax: height-42,
                                 imageUploadRemoteUrls: false
                             }">
                 </froala-editor>
             </div>
+            <div style="margin:10px 10px;">
+                <button class="btn btn-primary" style="width: 80px;">
+                    Save
+                </button>
+                <button class="btn btn-warning" style="width: 80px;">
+                    Cancel
+                </button>
+            </div>
 
         </div>
-
-    </div>
-    <div class="row">
-        Control buttons
     </div>
 
 </template>
