--- a/src/groups/user-info.html
+++ b/src/groups/user-info.html
@@ -94,7 +94,7 @@
                             </button>
                         </div>
                         <div class="form-group" if.bind="status_record.photo_uploaded" style="margin-top:12px;"
-                            disabled.bind="dirty ? 'diabled' : ''">
+                            disabled.bind="dirty ? 'disabled' : ''">
                             <button name="next" click.trigger="next_photo()" class="btn btn-info btn-block"
                                 disabled.bind="missing_photo_info">
                                 ${"groups.next-photo" & t}
