--- a/src/admin/merge-help-messages.html
+++ b/src/admin/merge-help-messages.html
@@ -18,7 +18,7 @@
                 </form>
                 <ul style="height:170px;overflow:auto;margin-top:5px;width:420px;margin-right:-20px;">
                     <li repeat.for="message of message_list | filter : filter : 'name'">
-                        <button click.delegate="select_message(message)" class="btn btn-default" style="width:350px;">
+                        <button click.delegate="select_message(message)" class="btn btn-default" style="width:350px;" disabled.bind="dirty ? 'disabled' : ''">
                             ${message.topic} ${message.name} [${message.last_version}]
                         </button>
                     </li>
@@ -28,7 +28,7 @@
 
             </div>
         </div>
-        <edit-side-by-side fixed_str.bind="left_text" edited_str.bind="right_text" height.bind="520" init.bind="init" save.delegate="saved()">
+        <edit-side-by-side fixed_str.bind="left_text" edited_str.bind="right_text" height.bind="520" init.bind="init" dirty.bind="dirty" save.delegate="saved()">
 
         </edit-side-by-side>
     </div>
