sync help messages

--- a/src/resources/elements/edit-side-by-side.html
+++ b/src/resources/elements/edit-side-by-side.html
@@ -2,7 +2,7 @@
     <div class="row" css="height:${height}px;">
         <div class="col-md-6" innerhtml.bind="fixed_str"
             id="left-panel"
-            style="height:566px;overflow:auto;background-color:beige;border:4px solid lightgray;">
+            style="height:566px;width:561px;font-size:105%;overflow:auto;background-color:beige;border:4px solid lightgray;">
 
         </div>
         <div class="col-md-6" style="display:flex;flex-direction:column;">
