--- a/src/user/user-mode.html
+++ b/src/user/user-mode.html
@@ -101,7 +101,9 @@
         <ul class="dropdown-menu dropdown-menu-left" disabled.bind="isChangingLocale">
             <li style="border-bottom:solid 1px gray;">
                 <!-- Sharingbutton Facebook -->
-                <a class="resp-sharing-button__link" href="https://facebook.com/sharer/sharer.php?u=${current_url}"
+                <a class="resp-sharing-button__link" 
+                    href="https://facebook.com/sharer/sharer.php?u=${current_url}"
+                    disabled="${current_url ? '' : 'disabled'}"
                     target="_blank" rel="noopener">
                     <i class="fab fa-facebook-f"></i>&nbsp;&nbsp;Facebook
                 </a>
@@ -110,19 +112,23 @@
                 <!-- Sharingbutton Twitter -->
                 <a class="resp-sharing-button__link"
                     href="https://twitter.com/intent/tweet/?text=${sharing_subject}%0A%0D${current_url}"
+                    disabled="${current_url ? '' : 'disabled'}"
                     target="_blank" rel="noopener">
                     <i class="fab fa-twitter"></i>&nbsp;&nbsp;Twitter
                 </a>
             </li>
             <li style="border-bottom:solid 1px gray;">
                 <!-- Sharingbutton E-Mail -->
-                <a class="resp-sharing-button__link" href="mailto:?subject=${sharing_subject}&body=${current_url}"
+                <a class="resp-sharing-button__link" 
+                    href="mailto:?subject=${sharing_subject}&body=${current_url}"
+                    disabled="${current_url ? '' : 'disabled'}"
                     target="_blank" rel="noopener">
                     <i class="far fa-envelope"></i>&nbsp;&nbsp;Mail
                 </a>
             </li>
             <li>
-                <a class="resp-sharing-button__link" href="#" click.delegate="notify_link_copied()">
+                <a class="resp-sharing-button__link" href="#" click.delegate="notify_link_copied()"
+                    disabled="${current_url ? '' : 'disabled'}">
                     <i class="far fa-link"></i>&nbsp;&nbsp;Copy link
                 </a>
             </li>
