--- a/src/photos/photo-detail.html
+++ b/src/photos/photo-detail.html
@@ -21,7 +21,13 @@
         <div class="row">
             <div class="col-md-7" style="display:flex;flex-direction:column;margin-top:16px;" id="photo-box">
                 <img src.bind="photo_src" width="${photo_width}" click.trigger="open_full_size_photo()" />
-                <span dir="${theme.rtltr}" if.bind="photo_story.name">${photo_story.name}</span>
+                
+                <span>
+                    <span dir="${theme.rtltr}" if.bind="photo_story.name">${photo_story.name}</span>
+                    <!-- <button class="btn btn-basic" if.bind="true || user.editing" click.delegate="expose_map()" style="margin-right:60px;border:solid 2px lightgray;">
+                        <i class="fa fa-map-marker-alt" style="color:dodgerblue"></i> ${'photos.view-map' & t}
+                    </button> -->
+                </span>
                 <span dir="${theme.rtltr}" if.bind="photographer_name">${'photos.photographer-name' & t}:
                     ${photographer_name}</span>
                 <date-range label="photos.photo-date" if.bind="photo_date_str || user.editing"
@@ -41,7 +47,10 @@
                 </div>
                 <div class="row" style="padding-right:15px;">
                     <div class="fr-view" dir="rtl">
-                        <div style="padding-right:0">
+                        <div if.bind="map_visible">
+                            <google-map></google-map>
+                        </div>
+                        <div style="padding-right:0" if.bind="! map_visible">
                             <div if.bind="! user.editing" class="row photo-story">
                                 <div class="fr-view" dir="${story_dir}">
                                     <div class="${theme.font_size}"
