report total photos

--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -9,7 +9,11 @@
                         style="position:absolute;top:82px;left:4px;"
                         class="range vertical-lowest-first round" />
                     <span style="position:absolute;top:150px">${'photos.larger' & t}</span>
-                    <span style="position:absolute;top:200px">${photo_list.length} ${'photos.photos' & t}</span>
+                    <span if.bind="photo_list.length>0" style="position:absolute;top:200px">${photo_list.length} ${'photos.photos' & t}</span>
+                    <span if.bind="total_photos>photo_list.length" style="position:absolute;top:230px">${'photos.out-of' & t}${total_photos} </span>
+                    <p if.bind="total_photos>photo_list.length" style="position:absolute;top:260px;color:royalblue">
+                        ${'photos.to-see-more' & t}
+                    </p>
                 </div>
                 <div class="col-md-8">
                     <div class="row" style="margin-bottom:15px;padding-right:15px;">
